added some of me

--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Bio/Links"
   avatar           : "profile.png"
-  bio              : "I am a Ph.D. student studying statistics at the University of Missouri Columbia. My current areas of interest are in spatio-temporal and sports statistics."
+  bio              : "I am a Ph.D. cadidate studying statistics at the University of Missouri Columbia"
   location         : "Columbia, MO"
   employer         : "University of Columbia Missouri"
   pubmed           :
