--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Bio/Links"
-  avatar           : "profile.png"
+  avatar           : "images/head_shot.jpg"
   bio              : "I am a Ph.D. cadidate studying statistics at the University of Missouri Columbia"
   location         : "Columbia, MO"
   employer         : "University of Columbia Missouri"
