--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,10 @@
 # main links links
 main:
   - title: "Research"
-    url: /publications/
+    url: /research/
+
+  # - title: "Publications"
+  #   url: /publications/
 
   # - title: "Talks"
   #   url: /talks/
@@ -9,8 +12,8 @@ main:
   # - title: "Teaching"
   #   url: /teaching/
 
-#  - title: "Portfolio"
-#    url: /portfolio/
+  # - title: "Portfolio"
+  #   url: /portfolio/
 
   # - title: "Blog Posts"
   #   url: /year-archive/
@@ -21,5 +24,5 @@ main:
   - title: "Code"
     url: /code/
 
-#  - title: "Guide"
-#    url: /markdown/
+  # - title: "Guide"
+  #   url: /markdown/
